Kubernetes/beszel/beszel-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel-server-service
  namespace: monitoring
  annotations:
    metallb.universe.tf/address-pool: "default-pool"
    metallb.universe.tf/loadBalancerIPs: "192.168.3.203"
spec:
  type: LoadBalancer
  selector:
    app: beszel-server
  ports:
    - port: 80
      targetPort: 8090
      nodePort: 30090
